# messyvirgo-artwork-creator

./: .env.example  .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  TRADEMARK.md  pyproject.toml  start_web.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
avatar_reference_generator/: __init__.py  background.py  cli.py  config.py  executor.py  openrouter.py  planner.py  prompts.py  scene_executor.py  scene_prompts.py  web.py
config/: avatar_prompts.yaml  messy_scene_prompts.yaml
docs/: avatar-reference-runbook.md
mv_artwork_creator/: cli.py  config.py  images.py  messy_fy_executor.py  messy_fy_prompts.py  models.py  openrouter.py  paths.py  presets.py  scene_executor.py  sharpen.py  user_config.py  validation.py  web.py
mv_artwork_creator/resources/: messy_fy_prompts.yaml  models.yaml  scene_prompts.yaml
openspec/: config.yaml
openspec/changes/add-avatar-reference-set-generation/: design.md  proposal.md  tasks.md
openspec/changes/add-avatar-reference-set-generation/specs/avatar-reference-set-generation/: spec.md
openspec/changes/archive/2026-05-31-add-avatar-reference-set-generation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-31-add-avatar-reference-set-generation/specs/avatar-reference-set-generation/: spec.md
openspec/changes/archive/2026-05-31-add-scene-image-generator/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-31-add-scene-image-generator/specs/local-generator-web-interface/: spec.md
openspec/changes/archive/2026-05-31-add-scene-image-generator/specs/messy-scene-image-generation/: spec.md
openspec/changes/archive/2026-06-02-sync-artwork-creator-suite/: design.md  proposal.md  tasks.md
openspec/changes/redesign-local-web-ui/: design.md  proposal.md  tasks.md
openspec/changes/redesign-local-web-ui/specs/local-generator-web-interface/: spec.md
openspec/specs/avatar-reference-set-generation/: spec.md
openspec/specs/local-generator-web-interface/: spec.md
openspec/specs/messy-fy-image-generation/: spec.md
openspec/specs/messy-scene-image-generation/: spec.md
tests/: test_avatar_generation.py  test_avatar_reference_generator.py  test_messy_fy_image_generator.py  test_scene_image_generator.py  test_user_config.py  test_web_write_mode.py
(+4 files in other folders)
