[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "messyvirgo-avatar-creator"
version = "0.1.0"
description = "Generate reusable anime avatar reference image sets with OpenRouter."
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
rembg = [
  "rembg[cpu]>=2.0.50",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["avatar_reference_generator*"]

[tool.pytest.ini_options]
pythonpath = ["."]
